gcc/testsuite/rust/rustc/ui/rfc-2126-extern-absolute-paths/non-existent-3.rs
// edition:2018

use ycrate; // { dg-error ".E0432." "" { target *-*-* } }

fn main() {}

